# assistant-fictionalism

./: .gitignore  CLAUDE.md  pyproject.toml
datasets/: consistency_prompts.jsonl  personae.json  personae_small.json  prompts.jsonl  prompts_small.jsonl
hpc/: batch_inference.slurm  compute_embedding_variance.slurm  compute_embeddings.slurm  consistency_inference.slurm  install_package.slurm
scripts/: compare_logprobs_accuracy.py  compare_logprobs_detailed.py  compare_logprobs_histogram.py  compare_summary.py  compute_embedding_variance.py  followup_analysis.py  investigate_anomalies.py
src/: colors.py  commands.py  device.py  main.py  model.py  template.py
src/batch/: config.py  consistency.py  embeddings.py  inference.py  metrics.py  system_prompts.py
src/interactive/: commands.py  keyboard.py  main.py
src/viz/: __init__.py  app.py  embeddings_app.py
