[project]
name = "assistant-persona"
version = "0.1.0"
description = "LLM chatbot with customizable persona support"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.51.0",
    "accelerate>=0.20.0",
    "colorama>=0.4.6",
    "prompt-toolkit>=3.0.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
